[package]
name = "cuda_setup"
version = "0.1.3"
edition = "2024"
authors = ["David O'Connor <the_alchemist@fastmail.com>"]
description = "Assists with CUDA setup when using the CUDARC lib."
keywords = ["cuda", "cudarc", "gpu"]
categories = ["hardware-support", "api-bindings"]
repository = "https://github.com/David-OConnor/cuda_setup"
documentation = "https://docs.rs/cuda_setup"
readme = "README.md"
license = "MIT"
exclude = [".gitignore"]

[dependencies]
cudarc = "^0.16.4"

[features]

cuda-12050 = ["cudarc/cuda-12050"]
cuda-12060 = ["cudarc/cuda-12060"]
cuda-12080 = ["cudarc/cuda-12080"]
cuda-12090 = ["cudarc/cuda-12090"]